Fix paths and layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -202,7 +202,7 @@ header .menu-icon {
   height: 350px;
   position: absolute;
   right: 40%;
-  bottom:50px;
+  bottom:100%;
 }
 .counters {
   display: flex;
